--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Tessellate by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Tessellate by HTML5 UP</title>
+		<title>I'm Nick Hsu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,11 +11,11 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Hi, I'm Nick Hsu.</h1>
+					<p>I'm a Computer Engineering Student at Northwestern University.</p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">Welcome to my portfolio.</a>
 				</footer>
 			</section>
 
@@ -28,9 +23,12 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>About Me.</h2>
+						<p>I'm a second-year at Northwestern University, on track to complete the Computer 
+						Engineering BS/MS program by 2025. My interests lie primarily in hardware, but 
+						I love learning about anything and everything computing-related. Feel free to explore
+						the rest of my portfolio!
+						</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -38,43 +36,41 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon fa-clock"></span></span>
+									<span class="feature-icon"><span class="icon solid fa-book-open"></span></span>
 									<header>
-										<h3>Gravida</h3>
+										<h3>Education</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>I'm currently studying towards my BS/MS in Computer Engineering at Northwestern University. I've
+										currently taken courses in CMOS Circuit Design, Signals & Systems, and Solid State Engineering.										
+									</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
 									<header>
-										<h3>Vivamus</h3>
+										<h3>Skills</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>I'm constantly improving on my technical skillset in both hardware and programming -- 
+										I have experience in Python, C/C++ and HTML. I've also had 5+ 
+										years of leadership experience, and always look forward to working on a team.</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-cloud"></span></span>
 									<header>
-										<h3>Accumsan</h3>
+										<h3>Interests</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>More personally, I love playing and watching	basketball, weightlifting,
+										playing the violin, skiing during the winter, and building computers for 
+										friends whenever I get the chance!
+									</p>
 								</section>
 							</div>
 							<div class="col-12">
 								<footer>
-									<a href="#second" class="button scrolly">Gravida tempor lacinia</a>
+									<a href="#second" class="button scrolly">More about my experience.</a>
 								</footer>
 							</div>
 						</div>
@@ -83,12 +79,14 @@
 			</section>
 
 		<!-- Second -->
-			<section id="second" class="main">
+			<!-- <section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>Euismod sed feugiat lorem tempus magna</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>Technical and Work Experience</h2>
+						<p>I've worked in both a semiconductor fabrication plant and an early-stage startup, with roles related
+						to robotics (programming, deployment, and implementation). In the future, I hope to work in hardware
+						design and verification, specifically in chip architecture.
+						</p>
 					</div>
 				</header>
 				<div class="content dark style2">
@@ -122,16 +120,17 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</section>
 
 		<!-- Third -->
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>Ornare varius lorem ipsum ante lectus</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>Technical and Work Experience</h2>
+						<p>I've worked in both a semiconductor fabrication plant and an early-stage startup, with roles related
+							to robotics (programming, deployment, and implementation). In the future, I hope to work in hardware
+							design and verification, specifically in chip architecture.</p>
 					</div>
 				</header>
 				<div class="content dark style3">
@@ -182,6 +181,8 @@
 					</div>
 				</div>
 			</section>
+
+		
 
 		<!-- Basic Elements -->
 		<!--
