--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 		-->
 
 		<!-- Fourth -->
-			<section id="fourth" class="main">
+			<!-- <section id="fourth" class="main">
 				<header>
 					<div class="container">
 						<h2>Sed feugiat ipsum consequat</h2>
@@ -374,7 +374,7 @@
 						</form>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Footer -->
 			<section id="footer">
