--- a/index.html
+++ b/index.html
@@ -135,46 +135,67 @@
 				</header>
 				<div class="content dark style3">
 					<div class="container">
-						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/pic07.png" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
-								<h3>Diam vivamus turpis lorem sodales lectus ornare</h3>
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-								euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu eget ornare varius
-								gravida dolore euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu
-								eget ornare et magna.</p>
+								<h3>Robotics and Automation Intern</h3>
+								<p>Working on a medium-sized team, I led the development of standardized emergency
+									eye wash station inspections into Spot mobile robot missions through Python programming
+									and the Boston Dynamics API. I also developed a comprehensive training 
+									manual covering Python basics and basic API implementation.
+								</p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-								euismod lorem ipsum dolor sit amet consequat eget ornare varius gravida euismod.
-								Gravida dis lorem ipsum dolor placerat magna tempus feugiat magna tempus lorem.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia.</p>
+								<p>With the Spot mobile robot, I also integrated and 	deployed demonstrations incorporating autonomous
+									pick-and-place of a mug created through training and evaulating a machine learning 
+									model while modifying the batch size and number of classes with the TensorFLow object 
+									detection API, LabelImg, NumPy, and Pandas.
+								</p>
+								<p>Furthermore, I verified the Spot robot's capabilities within the sub-fabrication</p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>Placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui
-								lacinia eget ornare varius gravida. Gravida dis placerat lectus ante vel nunc
-								euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus augue
-								cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat. Lectus ante vel nunc euismod
-								est turpis sodales. Diam tempor dui lacinia dolore.</p>
-								<p>Accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida
-								dolore euismod lorem ipsum dolor sit amet conseismod lorem ipsum dolor sit amet
-								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p>
+								<p> environment by
+									first designing and implementing a testing methodology to encapsulate all possible blockage and 
+									interference types, amounting to over 1000 trials run. Also in the sub-fabrication environment, I 
+									evaluated pumps, blowers, and other apparatus.</p>
 								<footer>
-									<a href="#fourth" class="button scrolly">Ipsum ornare lorem dolor</a>
+									<a href="#fourth" class="button scrolly">My Next Experience.</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Third -->
+			<section id="third" class="main">
+				<div class="content dark style5">
+					<div class="container">
+						<span class="image feature"><img src="images/pic07.png" alt="" /></span>
+						<div class="row">
+							<div class="col-4 col-12-narrow">
+								<h3>Robotics and Automation Intern</h3>
+								<p>Working on a medium-sized team, I led the development of standardized emergency
+									eye wash station inspections into Spot mobile robot missions through Python programming
+									and the Boston Dynamics API. I also developed a comprehensive training 
+									manual covering Python basics and basic API implementation.
+								</p>
+							</div>
+							<div class="col-4 col-12-narrow">
+								<p>With the Spot mobile robot, I also integrated and 	deployed demonstrations incorporating autonomous
+									pick-and-place of a mug created through training and evaulating a machine learning 
+									model while modifying the batch size and number of classes with the TensorFLow object 
+									detection API, LabelImg, NumPy, and Pandas.
+								</p>
+								<p>Furthermore, I verified the Spot robot's capabilities within the sub-fabrication</p>
+							</div>
+							<div class="col-4 col-12-narrow">
+								<p> environment by
+									first designing and implementing a testing methodology to encapsulate all possible blockage and 
+									interference types, amounting to over 1000 trials run. Also in the sub-fabrication environment, I 
+									evaluated pumps, blowers, and other apparatus.</p>
+								<footer>
+									<a href="#fourth" class="button scrolly">My Next Experience.</a>
 								</footer>
 							</div>
 						</div>
