--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							</div>
 							<div class="col-12">
 								<footer>
-									<a href="#second" class="button scrolly">More about my experience.</a>
+									<a href="#third" class="button scrolly">More about my experience.</a>
 								</footer>
 							</div>
 						</div>
@@ -135,68 +135,60 @@
 				</header>
 				<div class="content dark style3">
 					<div class="container">
-						<span class="image featured"><img src="images/pic07.png" alt="" /></span>
-						<div class="row">
+						<span class="image feature"><img src="images/pic07.png" alt="" /></span>
+						<div class="row">	
 							<div class="col-4 col-12-narrow">
 								<h3>Robotics and Automation Intern</h3>
+								<footer>
+									<a href="#fourth" class="button scrolly">My Next Experience.</a>
+								</footer>
+							</div>
+							<div class="col-8 col-12-narrow">
 								<p>Working on a medium-sized team, I led the development of standardized emergency
 									eye wash station inspections into Spot mobile robot missions through Python programming
 									and the Boston Dynamics API. I also developed a comprehensive training 
 									manual covering Python basics and basic API implementation.
 								</p>
-							</div>
-							<div class="col-4 col-12-narrow">
-								<p>With the Spot mobile robot, I also integrated and 	deployed demonstrations incorporating autonomous
-									pick-and-place of a mug created through training and evaulating a machine learning 
+								<p>I also integrated and deployed demonstrations incorporating autonomous
+									pick-and-place of a mug with the Spot mobile robot created through training and evaulating a machine learning 
 									model while modifying the batch size and number of classes with the TensorFLow object 
 									detection API, LabelImg, NumPy, and Pandas.
 								</p>
-								<p>Furthermore, I verified the Spot robot's capabilities within the sub-fabrication</p>
 							</div>
-							<div class="col-4 col-12-narrow">
+							<!-- <div class="col-4 col-12-narrow">
+								<p>Furthermore, I verified the Spot robot's capabilities within the sub-fabrication</p>
 								<p> environment by
 									first designing and implementing a testing methodology to encapsulate all possible blockage and 
 									interference types, amounting to over 1000 trials run. Also in the sub-fabrication environment, I 
-									evaluated pumps, blowers, and other apparatus.</p>
-								<footer>
-									<a href="#fourth" class="button scrolly">My Next Experience.</a>
-								</footer>
-							</div>
+									evaluated pumps, blowers, and other apparatus.</p> -->
 						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- Third -->
-			<section id="third" class="main">
+			<section id="fourth" class="main">
 				<div class="content dark style5">
 					<div class="container">
-						<span class="image feature"><img src="images/pic07.png" alt="" /></span>
+						<span class="image feature"><img src="images/pic08.png" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
-								<h3>Robotics and Automation Intern</h3>
+								<h3>Robotics Intern</h3>
+								<footer>
+									<a href="#fourth" class="button scrolly">My Next Experience.</a>
+								</footer>
+							</div>
+							<div class="col-8 col-12-narrow">
 								<p>Working on a medium-sized team, I led the development of standardized emergency
 									eye wash station inspections into Spot mobile robot missions through Python programming
 									and the Boston Dynamics API. I also developed a comprehensive training 
 									manual covering Python basics and basic API implementation.
 								</p>
-							</div>
-							<div class="col-4 col-12-narrow">
-								<p>With the Spot mobile robot, I also integrated and 	deployed demonstrations incorporating autonomous
-									pick-and-place of a mug created through training and evaulating a machine learning 
+								<p>I also integrated and deployed demonstrations incorporating autonomous
+									pick-and-place of a mug with the Spot mobile robot created through training and evaulating a machine learning 
 									model while modifying the batch size and number of classes with the TensorFLow object 
 									detection API, LabelImg, NumPy, and Pandas.
 								</p>
-								<p>Furthermore, I verified the Spot robot's capabilities within the sub-fabrication</p>
-							</div>
-							<div class="col-4 col-12-narrow">
-								<p> environment by
-									first designing and implementing a testing methodology to encapsulate all possible blockage and 
-									interference types, amounting to over 1000 trials run. Also in the sub-fabrication environment, I 
-									evaluated pumps, blowers, and other apparatus.</p>
-								<footer>
-									<a href="#fourth" class="button scrolly">My Next Experience.</a>
-								</footer>
 							</div>
 						</div>
 					</div>
