--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 								</p>
 								<p>I also integrated and deployed demonstrations incorporating autonomous
 									pick-and-place of a mug with the Spot mobile robot created through training and evaulating a machine learning 
-									model while modifying the batch size and number of classes with the TensorFLow object 
+									model while testing different batch sizes and number of classes with the TensorFlow object 
 									detection API, LabelImg, NumPy, and Pandas.
 								</p>
 							</div>
@@ -170,7 +170,7 @@
 			<section id="fourth" class="main">
 				<div class="content dark style5">
 					<div class="container">
-						<span class="image feature"><img src="images/pic08.png" alt="" /></span>
+						<span class="image feature"><img src="images/tr.png" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<h3>Robotics Intern</h3>
@@ -179,15 +179,15 @@
 								</footer>
 							</div>
 							<div class="col-8 col-12-narrow">
-								<p>Working on a medium-sized team, I led the development of standardized emergency
-									eye wash station inspections into Spot mobile robot missions through Python programming
-									and the Boston Dynamics API. I also developed a comprehensive training 
-									manual covering Python basics and basic API implementation.
+								<p>Working on a small-sized startup-style team, I led the design and programming of cobot demonstrations 
+									incorporating pick-and-place, palletization, visual servoing, machine
+									tending, and object quality inspections using Techman collaborative robots and OnRobot grippers. Using 
+									RoboDK, I also developed multiple projects involving laser cutting, pick-and-place, and quality inspection.
 								</p>
-								<p>I also integrated and deployed demonstrations incorporating autonomous
-									pick-and-place of a mug with the Spot mobile robot created through training and evaulating a machine learning 
-									model while modifying the batch size and number of classes with the TensorFLow object 
-									detection API, LabelImg, NumPy, and Pandas.
+								<p>Furthermore, I aided in the construction of 6 educational cobot workstations, a machine tending cobot stand, 
+									and an industrial tape dispenser & cutting machine. Researched and compiled presentations on emerging software 
+									and hardware competition and presented findings to Vice
+									President, Sales Manager, and software developers using PowerPoint.
 								</p>
 							</div>
 						</div>
