--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon solid fa-book-open"></span></span>
+									<!-- <span class="feature-icon"><span class="icon solid fa-book-open"></span></span> -->
+									<span class="feature-icon"><img src="images/nu1.png"></span></span>
 									<header>
 										<h3>Education</h3>
 									</header>
