--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
+									<span class="feature-icon"><img src="images/c++resize.png"></span></span>
 									<header>
 										<h3>Skills</h3>
 									</header>
