--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon solid fa-cloud"></span></span>
+									<span class="feature-icon"><img src="images/interests.png"></span></span>
 									<header>
 										<h3>Interests</h3>
 									</header>
