Added timeline, removed previous experiences

--- a/index.html
+++ b/index.html
@@ -69,15 +69,9 @@
 										playing the violin, skiing during the winter, and building computers for 
 										friends whenever I get the chance!
 									</p>
-									<!-- <span class="feature-icon"><img src="images/interests.png"></span></span> -->
-									<!-- <span class="feature-icon"></span>
-										<img src="images/interests.png"></span> -->
 								</section>
 							</div>
 							<div class="col-12">
-								<!-- <footer>
-									<a href="#third" class="button scrolly">More about my experience.</a>
-								</footer> -->
 							</div>
 						</div>
 					</div>
@@ -168,13 +162,33 @@
 			<section id="fourth" class="main">
 				<div class="content dark style5">
 					<div class="container">
-						<span class="image feature"><img src="images/tr.png" alt="" /></span>
+						<div class="timeline">
+							<div class="timeline__component">
+							  <div class="timeline__position timeline__position--right">Robotics and Automation Intern</div>
+							  <div class="timeline__date timeline__date--right">Summer 2022</div>
+							</div>
+							<div class="timeline__middle">
+							  <div class="timeline__point"></div>
+							</div>
+							<div class="timeline__component">
+							  <h2 class="timeline__title">GlobalFoundries</h2>
+							  <p class="timeline__paragraph">
+								Working on a medium-sized team, I led the development of standardized emergency
+									eye wash station inspections into Spot mobile robot missions through Python programming
+									and the Boston Dynamics API. I also developed a comprehensive training 
+									manual covering Python basics and basic mission implementation. I integrated and deployed 
+									demonstrations incorporating autonomous	pick-and-place with the Spot mobile robot created through 
+									evaluating a pre-trained machine learning model with the TensorFlow object detection API, 
+									LabelImg, NumPy, and Pandas. Within the sub-fabrication	environment, I designed testing methodology 
+									to document and evaluate 120 different blockage and interference types, as well as inspected pumps, 
+									blowers, and other support equipment.
+							  </p>
+							</div>
+						<div class="timeline__component">
+						<!-- <span class="image feature"><img src="images/tr.png" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<h3>Robotics Intern</h3>
-								<!-- <footer>
-									<a href="#fourth" class="button scrolly">My Next Experience.</a>
-								</footer> -->
 							</div>
 							<div class="col-8 col-12-narrow">
 								<p>Working on a small-sized startup-style team, I led the design and programming of cobot demonstrations 
@@ -187,9 +201,9 @@
 									and hardware competition and presented findings to Vice President, Sales Manager, and software developers using PowerPoint.
 								</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
-				</div>
+				</div>	
 			</section>
 
 		
