Condensed work history

--- a/index.html
+++ b/index.html
@@ -133,34 +133,11 @@
 							verification and design, specifically in chip architecture.</p>
 					</div>
 				</header>
-				<div class="content dark style3">
-					<div class="container">
-						<span class="image feature"><img src="images/pic07.png" alt="" /></span>
-						<div class="row">	
-							<div class="col-4 col-12-narrow">
-								<h3>Robotics and Automation Intern</h3>
-							</div>
-							<div class="col-8 col-12-narrow">
-								<p>Working on a medium-sized team, I led the development of standardized emergency
-									eye wash station inspections into Spot mobile robot missions through Python programming
-									and the Boston Dynamics API. I also developed a comprehensive training 
-									manual covering Python basics and basic mission implementation.
-								</p>
-								<p>I also integrated and deployed demonstrations incorporating autonomous
-									pick-and-place with the Spot mobile robot created through evaluating a pre-trained machine learning 
-									model with the TensorFlow object detection API, LabelImg, NumPy, and Pandas. Within the sub-fabrication
-									environment, I desnigned testing methodology to document and evaluate 120 different blockage and 
-									interference types, as well as inspected pumps, blowers, and other support equipment.
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
 			</section>
 
 		<!-- Third -->
 			<section id="fourth" class="main">
-				<div class="content dark style5">
+				<div class="content dark style3">
 					<div class="container">
 						<div class="timeline">
 							<div class="timeline__component">
@@ -171,9 +148,13 @@
 							  <div class="timeline__point"></div>
 							</div>
 							<div class="timeline__component">
-							  <h2 class="timeline__title">GlobalFoundries</h2>
+							  <h2 class="timeline__title"><a href="https://gf.com">GlobalFoundries</a></h2>
 							  <p class="timeline__paragraph">
-								Working on a medium-sized team, I led the development of standardized emergency
+									Developed Python scripts to deploy Boston Dynamics' Spot mobile robot in the sub-fabrication environment.
+								    Revised demonstrations involving autonomous pick-and-place using
+									TensorFlow, NumPy, and Pandas. Analyzed pumps, blowers, and blockages through SOLIDWORKS and Excel.
+							  </p>
+							  <!-- Full Description: Working on a medium-sized team, I led the development of standardized emergency
 									eye wash station inspections into Spot mobile robot missions through Python programming
 									and the Boston Dynamics API. I also developed a comprehensive training 
 									manual covering Python basics and basic mission implementation. I integrated and deployed 
@@ -181,224 +162,34 @@
 									evaluating a pre-trained machine learning model with the TensorFlow object detection API, 
 									LabelImg, NumPy, and Pandas. Within the sub-fabrication	environment, I designed testing methodology 
 									to document and evaluate 120 different blockage and interference types, as well as inspected pumps, 
-									blowers, and other support equipment.
-							  </p>
+									blowers, and other support equipment. -->
 							</div>
-						<div class="timeline__component">
-						<!-- <span class="image feature"><img src="images/tr.png" alt="" /></span>
-						<div class="row">
-							<div class="col-4 col-12-narrow">
-								<h3>Robotics Intern</h3>
-							</div>
-							<div class="col-8 col-12-narrow">
-								<p>Working on a small-sized startup-style team, I led the design and programming of cobot demonstrations 
+							<div class="timeline__component">
+								<div class="timeline__position timeline__position--right">Robotics Intern</div>
+								<div class="timeline__date timeline__date--right">Summer 2021</div>
+							  </div>
+							  <div class="timeline__middle">
+								<div class="timeline__point"></div>
+							  </div>
+							  <div class="timeline__component">
+								<h2 class="timeline__title"><a href="https://www.telamon.com/robotics/">Telamon Robotics</a></h2>
+								<p class="timeline__paragraph">
+									Led design and programming of cobot demonstrations. Developed RoboDK scripts for autonomous deployment. Aided in 
+									construction of workstations, machine tending cobot stand, and industrial machine solution.
+								</p>
+								<!-- Full Description: Working on a small-sized startup-style team, I led the design and programming of cobot demonstrations 
 									incorporating pick-and-place, palletization, visual servoing, machine
 									tending, and object quality inspections using Techman collaborative robots and OnRobot grippers. Using 
 									RoboDK, I also developed multiple projects involving laser cutting, pick-and-place, and quality inspection.
-								</p>
-								<p>Furthermore, I aided in the construction of 6 educational cobot workstations, a machine tending cobot stand, 
+									Furthermore, I aided in the construction of 6 educational cobot workstations, a machine tending cobot stand, 
 									and an industrial tape dispenser & cutting machine. I also researched and compiled presentations on emerging software 
-									and hardware competition and presented findings to Vice President, Sales Manager, and software developers using PowerPoint.
-								</p>
-							</div>
-						</div> -->
+									and hardware competition and presented findings to Vice President, Sales Manager, and software developers using PowerPoint. -->
+							  </div>							  
 					</div>
 				</div>	
 			</section>
 
-		
-
-		<!-- Basic Elements -->
-		<!--
-			<section class="main">
-				<header>
-					<div class="container">
-						<h2>A Whole Lotta Elements</h2>
-						<p>General purpose elements for every general purpose. Or something like that.</p>
-					</div>
-				</header>
-				<div class="content style1 dark">
-					<div class="container">
-						<section>
-							<header>
-								<h3>Paragraph</h3>
-								<p>This is a byline</p>
-							</header>
-							<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-							habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-							leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-							amet risus elit.</p>
-						</section>
-						<section>
-							<header>
-								<h3>Blockquote</h3>
-							</header>
-							<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-							tempus euismod. Vestibulum ante ipsum primis in faucibus. Cras sit amet urna eros, id egestas
-							tempus ante ipsum primis in faucibus orci luctus et ultrices.</blockquote>
-						</section>
-						<section>
-							<header>
-								<h3>Divider</h3>
-							</header>
-							<p>Donec consectetur <a href="#">vestibulum dolor et pulvinar</a>. Etiam vel felis enim, at viverra
-							ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-							facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-							tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-							posuere cubilia.</p>
-							<hr />
-							<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-							ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-							facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-							tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-							posuere cubilia.</p>
-						</section>
-						<section>
-							<header>
-								<h3>Unordered List</h3>
-							</header>
-							<ul class="default">
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-							</ul>
-						</section>
-						<section>
-							<header>
-								<h3>Ordered List</h3>
-							</header>
-							<ol class="default">
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-								<li>Donec consectetur vestibulum dolor et vel felis enim at viverra ligula. Ut porttitor sagittis lorem.</li>
-							</ol>
-						</section>
-						<section>
-							<header>
-								<h3>Table</h3>
-							</header>
-							<div class="table-wrapper">
-								<table class="default">
-									<thead>
-										<tr>
-											<th>ID</th>
-											<th>Name</th>
-											<th>Description</th>
-											<th>Price</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>00001</td>
-											<td>Lorem ipsum dolor</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>29.99</td>
-										</tr>
-										<tr>
-											<td>00002</td>
-											<td>Sit amet nullam</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>19.99</td>
-										</tr>
-										<tr>
-											<td>00003</td>
-											<td>Feugiat felis viverra</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>29.99</td>
-										</tr>
-										<tr>
-											<td>00004</td>
-											<td>Sagittis enim felis</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>19.99</td>
-										</tr>
-										<tr>
-											<td>00005</td>
-											<td>Nullam sed vestibulum</td>
-											<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-											<td>19.99</td>
-										</tr>
-									</tbody>
-									<tfoot>
-										<tr>
-											<td colspan="3"></td>
-											<td>100.00</td>
-										</tr>
-									</tfoot>
-								</table>
-							</div>
-						</section>
-						<section>
-							<header>
-								<h3>Form</h3>
-							</header>
-							<form method="post" action="#">
-								<div class="row gtr-50">
-									<div class="col-6 col-12-narrow">
-										<input type="text" name="name" id="name" value="" placeholder="John Doe" />
-									</div>
-									<div class="col-6 col-12-narrow">
-										<input type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-									</div>
-									<div class="col-12">
-										<div class="select" tabindex="-1">
-											<select name="department" id="department">
-												<option value="">Choose a department</option>
-												<option value="1">Manufacturing</option>
-												<option value="2">Administration</option>
-												<option value="3">Support</option>
-											</select>
-										</div>
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Enter your message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" class="button" value="Send Message" /></li>
-											<li><input type="reset" class="button alt" value="Clear Form" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</section>
-					</div>
-				</div>
-			</section>
-		-->
-
-		<!-- Fourth -->
-			<!-- <section id="fourth" class="main">
-				<header>
-					<div class="container">
-						<h2>Sed feugiat ipsum consequat</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
-					</div>
-				</header>
-				<div class="content style4 featured">
-					<div class="container medium">
-						<form method="post" action="#">
-							<div class="row gtr-50">
-								<div class="col-6 col-12-mobile"><input type="text" placeholder="Name" /></div>
-								<div class="col-6 col-12-mobile"><input type="text" placeholder="Email" /></div>
-								<div class="col-12"><textarea name="message" placeholder="Message"></textarea></div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" class="button" value="Send Message" /></li>
-										<li><input type="reset" class="button alt" value="Clear Form" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</section> -->
+	
 
 		<!-- Footer -->
 			<section id="footer">
